test_suite/tests/ui/float/derive/eq_without_finite.rs
use nutype::nutype;

#[nutype]
#[derive(PartialEq, Eq)]
pub struct Size(f32);

fn main() {}
